jtreg descriptions fixed